--- a/locale/it_IT/LC_MESSAGES/messages.po
+++ b/locale/it_IT/LC_MESSAGES/messages.po
@@ -1166,7 +1166,7 @@ msgstr "No specific password requirements"
 #: templates/add_user.html:45 install/templates/step4.html.twig:38
 #: install/templates/step5.html.twig:25
 msgid "Username"
-msgstr "Username"
+msgstr "Nome utente"
 
 #: templates/edit_user.html:49 templates/add_user.html:47
 msgid "Provide user name"
@@ -1468,7 +1468,7 @@ msgstr ""
 
 #: templates/add_user.html:60 install/templates/step4.html.twig:54
 msgid "Provide user password"
-msgstr "Provide user password"
+msgstr "Fornisci la password utente"
 
 #: templates/add_user.html:65
 msgid "Auto-generate password"
@@ -1850,7 +1850,7 @@ msgstr ""
 
 #: install/templates/step3.html.twig:44
 msgid "Note:"
-msgstr "Note:"
+msgstr "Nota:"
 
 #: install/templates/step6.html.twig:29
 msgid ""
@@ -1862,7 +1862,7 @@ msgstr ""
 
 #: install/templates/step5.html.twig:133 install/templates/step3.html.twig:55
 msgid "Continue to step"
-msgstr "Continue to step"
+msgstr "Continua al passaggio"
 
 #: install/templates/base.html.twig:29
 msgid "Installation step"
@@ -1903,15 +1903,15 @@ msgstr "Begin Installation"
 
 #: install/templates/step4.html.twig:3
 msgid "Configuring database"
-msgstr "Configuring database"
+msgstr "Configurazione database"
 
 #: install/templates/step4.html.twig:8
 msgid "Configuring Database Connection"
-msgstr "Configuring Database Connection"
+msgstr "Configurazione Connessione Database"
 
 #: install/templates/step4.html.twig:12
 msgid "Database Preparation:"
-msgstr "Database Preparation:"
+msgstr "Preparazione Database:"
 
 #: install/templates/step4.html.twig:12
 msgid ""
@@ -1923,35 +1923,35 @@ msgstr ""
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
-msgstr "Database Settings"
+msgstr "Impostazioni Database"
 
 #: install/templates/step4.html.twig:24
 msgid "Database type"
-msgstr "Database type"
+msgstr "Tipo di database"
 
 #: install/templates/step4.html.twig:33
 msgid "The type of the PowerDNS database."
-msgstr "The type of the PowerDNS database."
+msgstr "Il tipo di database PowerDNS."
 
 #: install/templates/step4.html.twig:41 install/templates/step5.html.twig:28
 msgid "Provide the user name"
-msgstr "Provide the user name"
+msgstr "Fornisci il nome utente"
 
 #: install/templates/step4.html.twig:44
 msgid "Database username with administrative rights."
-msgstr "Database username with administrative rights."
+msgstr "Nome utente del database con diritti amministrativi."
 
 #: install/templates/step4.html.twig:58
 msgid "Password for this database user."
-msgstr "Password for this database user."
+msgstr "Password per questo utente del database."
 
 #: install/templates/step4.html.twig:63
 msgid "Hostname"
-msgstr "Hostname"
+msgstr "Nome host"
 
 #: install/templates/step4.html.twig:66
 msgid "Provide the hostname"
-msgstr "Provide the hostname"
+msgstr "Fornisci il nome host"
 
 #: install/templates/step4.html.twig:69
 msgid "Database server hostname (usually \"localhost\")."
@@ -1959,15 +1959,15 @@ msgstr "Database server hostname (usually \"localhost\")."
 
 #: install/templates/step4.html.twig:74
 msgid "DB Port"
-msgstr "DB Port"
+msgstr "Porta DB"
 
 #: install/templates/step4.html.twig:77
 msgid "Provide database port"
-msgstr "Provide database port"
+msgstr "Fornisci la porta del database"
 
 #: install/templates/step4.html.twig:80
 msgid "Database server port."
-msgstr "Database server port."
+msgstr "Porta del server database."
 
 #: install/templates/step4.html.twig:85
 msgid "Database"
@@ -1975,35 +1975,35 @@ msgstr "Database"
 
 #: install/templates/step4.html.twig:88
 msgid "Provide the name of the database"
-msgstr "Provide the name of the database"
+msgstr "Fornisci il nome del database"
 
 #: install/templates/step4.html.twig:91
 msgid "PowerDNS database name."
-msgstr "PowerDNS database name."
+msgstr "Nome del database PowerDNS."
 
 #: install/templates/step4.html.twig:93
 msgid "Full path to SQLite database file"
-msgstr "Full path to SQLite database file"
+msgstr "Percorso completo al file database SQLite"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "File must exist with web server read/write access. Use absolute path."
+msgstr "Il file deve esistere con accesso in lettura/scrittura per il server web. Usa il percorso assoluto."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
-msgstr "DB charset"
+msgstr "Set di caratteri DB"
 
 #: install/templates/step4.html.twig:178 install/templates/step4.html.twig:186
 msgid "Use default"
-msgstr "Use default"
+msgstr "Usa predefinito"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Charset for new tables. Leave empty for database default."
+msgstr "Set di caratteri per le nuove tabelle. Lascia vuoto per il valore predefinito del database."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
-msgstr "DB collation"
+msgstr "Confronto DB"
 
 #: install/templates/step4.html.twig:123
 msgid ""
@@ -2013,15 +2013,15 @@ msgstr ""
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
-msgstr "Administrator Account"
+msgstr "Account Amministratore"
 
 #: install/templates/step4.html.twig:135
 msgid "Administrator password"
-msgstr "Administrator password"
+msgstr "Password amministratore"
 
 #: install/templates/step4.html.twig:140
 msgid "Provide a password"
-msgstr "Provide a password"
+msgstr "Fornisci una password"
 
 #: install/templates/step4.html.twig:145
 msgid ""
@@ -2031,23 +2031,23 @@ msgstr ""
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
-msgstr "System Requirements"
+msgstr "Requisiti di Sistema"
 
 #: install/templates/step2.html.twig:8
 msgid "System Requirements Check"
-msgstr "System Requirements Check"
+msgstr "Verifica dei Requisiti di Sistema"
 
 #: install/templates/step2.html.twig:12
 msgid "Requirements Check:"
-msgstr "Requirements Check:"
+msgstr "Verifica dei Requisiti:"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Verifying that your server meets all requirements to run Poweradmin."
+msgstr "Verifica che il server soddisfi tutti i requisiti per eseguire Poweradmin."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
-msgstr "PHP Version"
+msgstr "Versione PHP"
 
 #: install/templates/step2.html.twig:27
 msgid "OK"
@@ -2059,39 +2059,39 @@ msgstr "Requires PHP 8.1.0+"
 
 #: install/templates/step2.html.twig:40
 msgid "Database Extensions"
-msgstr "Database Extensions"
+msgstr "Estensioni del Database"
 
 #: install/templates/step2.html.twig:40
 msgid "at least one required"
-msgstr "at least one required"
+msgstr "almeno una richiesta"
 
 #: install/templates/step2.html.twig:61
 msgid "Required PHP Extensions"
-msgstr "Required PHP Extensions"
+msgstr "Estensioni PHP Richieste"
 
 #: install/templates/step2.html.twig:80
 msgid "Optional Extensions"
-msgstr "Optional Extensions"
+msgstr "Estensioni Opzionali"
 
 #: install/templates/step2.html.twig:104
 msgid "All required components are available."
-msgstr "All required components are available."
+msgstr "Tutti i componenti richiesti sono disponibili."
 
 #: install/templates/step2.html.twig:105
 msgid "You can continue with the installation."
-msgstr "You can continue with the installation."
+msgstr "Puoi continuare con l'installazione."
 
 #: install/templates/step2.html.twig:111
 msgid "Some required components are missing."
-msgstr "Some required components are missing."
+msgstr "Alcuni componenti richiesti sono mancanti."
 
 #: install/templates/step2.html.twig:112
 msgid "Please install the missing components before continuing."
-msgstr "Please install the missing components before continuing."
+msgstr "Si prega di installare i componenti mancanti prima di continuare."
 
 #: install/templates/step2.html.twig:116
 msgid "Check Again"
-msgstr "Check Again"
+msgstr "Controlla di Nuovo"
 
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
@@ -2261,19 +2261,19 @@ msgstr "Begin configuring your DNS zones and records"
 
 #: install/templates/step3.html.twig:3 install/templates/step3.html.twig:8
 msgid "Getting Ready"
-msgstr "Getting Ready"
+msgstr "Preparazione"
 
 #: install/templates/step3.html.twig:12
 msgid "Preparation:"
-msgstr "Preparation:"
+msgstr "Preparazione:"
 
 #: install/templates/step3.html.twig:12
 msgid "Let's get your PowerDNS database ready for Poweradmin."
-msgstr "Let's get your PowerDNS database ready for Poweradmin."
+msgstr "Prepariamo il tuo database PowerDNS per Poweradmin."
 
 #: install/templates/step3.html.twig:17
 msgid "About PowerDNS"
-msgstr "About PowerDNS"
+msgstr "Informazioni su PowerDNS"
 
 #: install/templates/step3.html.twig:20
 msgid ""
@@ -2285,11 +2285,11 @@ msgstr ""
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
-msgstr "Before proceeding, you should have:"
+msgstr "Prima di procedere, dovresti avere:"
 
 #: install/templates/step3.html.twig:23
 msgid "An operational PowerDNS installation"
-msgstr "An operational PowerDNS installation"
+msgstr "Un'installazione PowerDNS operativa"
 
 #: install/templates/step3.html.twig:24
 msgid "Database connectivity details (hostname, username, password)"
@@ -2297,31 +2297,31 @@ msgstr "Database connectivity details (hostname, username, password)"
 
 #: install/templates/step3.html.twig:25
 msgid "Administrative access to your database"
-msgstr "Administrative access to your database"
+msgstr "Accesso amministrativo al tuo database"
 
 #: install/templates/step3.html.twig:32
 msgid "Database Preparations"
-msgstr "Database Preparations"
+msgstr "Preparazioni del Database"
 
 #: install/templates/step3.html.twig:35
 msgid "In the next steps, Poweradmin will:"
-msgstr "In the next steps, Poweradmin will:"
+msgstr "Nei prossimi passi, Poweradmin:"
 
 #: install/templates/step3.html.twig:37
 msgid "Connect to your PowerDNS database"
-msgstr "Connect to your PowerDNS database"
+msgstr "Si connetterà al tuo database PowerDNS"
 
 #: install/templates/step3.html.twig:38
 msgid "Create tables needed for Poweradmin functionality"
-msgstr "Create tables needed for Poweradmin functionality"
+msgstr "Creerà le tabelle necessarie per le funzionalità di Poweradmin"
 
 #: install/templates/step3.html.twig:39
 msgid "Set up an administrator account for web access"
-msgstr "Set up an administrator account for web access"
+msgstr "Configurerà un account amministratore per l'accesso web"
 
 #: install/templates/step3.html.twig:40
 msgid "Create a config file to store your settings"
-msgstr "Create a config file to store your settings"
+msgstr "Creerà un file di configurazione per memorizzare le tue impostazioni"
 
 #: install/helpers/InstallStepHandler.php:169
 msgid "Updating database..."
