--- a/locale/zh_CN/LC_MESSAGES/messages.po
+++ b/locale/zh_CN/LC_MESSAGES/messages.po
@@ -1166,7 +1166,7 @@ msgstr "No specific password requirements"
 #: templates/add_user.html:45 install/templates/step4.html.twig:38
 #: install/templates/step5.html.twig:25
 msgid "Username"
-msgstr "Username"
+msgstr "用户名"
 
 #: templates/edit_user.html:49 templates/add_user.html:47
 msgid "Provide user name"
@@ -1179,7 +1179,7 @@ msgstr "Fullname"
 #: templates/index_cards.html:188 install/templates/step4.html.twig:49
 #: install/templates/step5.html.twig:36
 msgid "Password"
-msgstr "Password"
+msgstr "密码"
 
 #: templates/add_user.html:88
 msgid "Email address"
@@ -1468,7 +1468,7 @@ msgstr ""
 
 #: templates/add_user.html:60 install/templates/step4.html.twig:54
 msgid "Provide user password"
-msgstr "Provide user password"
+msgstr "提供用户密码"
 
 #: templates/add_user.html:65
 msgid "Auto-generate password"
@@ -1850,7 +1850,7 @@ msgstr ""
 
 #: install/templates/step3.html.twig:44
 msgid "Note:"
-msgstr "Note:"
+msgstr "注意："
 
 #: install/templates/step6.html.twig:29
 msgid ""
@@ -1862,7 +1862,7 @@ msgstr ""
 
 #: install/templates/step5.html.twig:133 install/templates/step3.html.twig:55
 msgid "Continue to step"
-msgstr "Continue to step"
+msgstr "继续到步骤"
 
 #: install/templates/base.html.twig:29
 msgid "Installation step"
@@ -1903,15 +1903,15 @@ msgstr "Begin Installation"
 
 #: install/templates/step4.html.twig:3
 msgid "Configuring database"
-msgstr "Configuring database"
+msgstr "配置数据库"
 
 #: install/templates/step4.html.twig:8
 msgid "Configuring Database Connection"
-msgstr "Configuring Database Connection"
+msgstr "配置数据库连接"
 
 #: install/templates/step4.html.twig:12
 msgid "Database Preparation:"
-msgstr "Database Preparation:"
+msgstr "数据库准备："
 
 #: install/templates/step4.html.twig:12
 msgid ""
@@ -1923,35 +1923,35 @@ msgstr ""
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
-msgstr "Database Settings"
+msgstr "数据库设置"
 
 #: install/templates/step4.html.twig:24
 msgid "Database type"
-msgstr "Database type"
+msgstr "数据库类型"
 
 #: install/templates/step4.html.twig:33
 msgid "The type of the PowerDNS database."
-msgstr "The type of the PowerDNS database."
+msgstr "PowerDNS数据库的类型。"
 
 #: install/templates/step4.html.twig:41 install/templates/step5.html.twig:28
 msgid "Provide the user name"
-msgstr "Provide the user name"
+msgstr "提供用户名"
 
 #: install/templates/step4.html.twig:44
 msgid "Database username with administrative rights."
-msgstr "Database username with administrative rights."
+msgstr "具有管理权限的数据库用户名。"
 
 #: install/templates/step4.html.twig:58
 msgid "Password for this database user."
-msgstr "Password for this database user."
+msgstr "此数据库用户的密码。"
 
 #: install/templates/step4.html.twig:63
 msgid "Hostname"
-msgstr "Hostname"
+msgstr "主机名"
 
 #: install/templates/step4.html.twig:66
 msgid "Provide the hostname"
-msgstr "Provide the hostname"
+msgstr "提供主机名"
 
 #: install/templates/step4.html.twig:69
 msgid "Database server hostname (usually \"localhost\")."
@@ -1959,51 +1959,51 @@ msgstr "Database server hostname (usually \"localhost\")."
 
 #: install/templates/step4.html.twig:74
 msgid "DB Port"
-msgstr "DB Port"
+msgstr "数据库端口"
 
 #: install/templates/step4.html.twig:77
 msgid "Provide database port"
-msgstr "Provide database port"
+msgstr "提供数据库端口"
 
 #: install/templates/step4.html.twig:80
 msgid "Database server port."
-msgstr "Database server port."
+msgstr "数据库服务器端口。"
 
 #: install/templates/step4.html.twig:85
 msgid "Database"
-msgstr "Database"
+msgstr "数据库"
 
 #: install/templates/step4.html.twig:88
 msgid "Provide the name of the database"
-msgstr "Provide the name of the database"
+msgstr "提供数据库名称"
 
 #: install/templates/step4.html.twig:91
 msgid "PowerDNS database name."
-msgstr "PowerDNS database name."
+msgstr "PowerDNS数据库名称。"
 
 #: install/templates/step4.html.twig:93
 msgid "Full path to SQLite database file"
-msgstr "Full path to SQLite database file"
+msgstr "SQLite数据库文件的完整路径"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "File must exist with web server read/write access. Use absolute path."
+msgstr "文件必须存在，并且Web服务器具有读/写访问权限。使用绝对路径。"
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
-msgstr "DB charset"
+msgstr "数据库字符集"
 
 #: install/templates/step4.html.twig:178 install/templates/step4.html.twig:186
 msgid "Use default"
-msgstr "Use default"
+msgstr "使用默认值"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Charset for new tables. Leave empty for database default."
+msgstr "新表的字符集。留空使用数据库默认值。"
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
-msgstr "DB collation"
+msgstr "数据库排序规则"
 
 #: install/templates/step4.html.twig:123
 msgid ""
@@ -2013,15 +2013,15 @@ msgstr ""
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
-msgstr "Administrator Account"
+msgstr "管理员账户"
 
 #: install/templates/step4.html.twig:135
 msgid "Administrator password"
-msgstr "Administrator password"
+msgstr "管理员密码"
 
 #: install/templates/step4.html.twig:140
 msgid "Provide a password"
-msgstr "Provide a password"
+msgstr "提供密码"
 
 #: install/templates/step4.html.twig:145
 msgid ""
@@ -2031,23 +2031,23 @@ msgstr ""
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
-msgstr "System Requirements"
+msgstr "系统要求"
 
 #: install/templates/step2.html.twig:8
 msgid "System Requirements Check"
-msgstr "System Requirements Check"
+msgstr "系统要求检查"
 
 #: install/templates/step2.html.twig:12
 msgid "Requirements Check:"
-msgstr "Requirements Check:"
+msgstr "需求检查："
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Verifying that your server meets all requirements to run Poweradmin."
+msgstr "验证您的服务器是否满足运行Poweradmin的所有要求。"
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
-msgstr "PHP Version"
+msgstr "PHP版本"
 
 #: install/templates/step2.html.twig:27
 msgid "OK"
@@ -2059,39 +2059,39 @@ msgstr "Requires PHP 8.1.0+"
 
 #: install/templates/step2.html.twig:40
 msgid "Database Extensions"
-msgstr "Database Extensions"
+msgstr "数据库扩展"
 
 #: install/templates/step2.html.twig:40
 msgid "at least one required"
-msgstr "at least one required"
+msgstr "至少需要一个"
 
 #: install/templates/step2.html.twig:61
 msgid "Required PHP Extensions"
-msgstr "Required PHP Extensions"
+msgstr "必需的PHP扩展"
 
 #: install/templates/step2.html.twig:80
 msgid "Optional Extensions"
-msgstr "Optional Extensions"
+msgstr "可选扩展"
 
 #: install/templates/step2.html.twig:104
 msgid "All required components are available."
-msgstr "All required components are available."
+msgstr "所有必需组件都可用。"
 
 #: install/templates/step2.html.twig:105
 msgid "You can continue with the installation."
-msgstr "You can continue with the installation."
+msgstr "您可以继续安装。"
 
 #: install/templates/step2.html.twig:111
 msgid "Some required components are missing."
-msgstr "Some required components are missing."
+msgstr "缺少一些必需组件。"
 
 #: install/templates/step2.html.twig:112
 msgid "Please install the missing components before continuing."
-msgstr "Please install the missing components before continuing."
+msgstr "请在继续之前安装缺少的组件。"
 
 #: install/templates/step2.html.twig:116
 msgid "Check Again"
-msgstr "Check Again"
+msgstr "再次检查"
 
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
@@ -2261,19 +2261,19 @@ msgstr "Begin configuring your DNS zones and records"
 
 #: install/templates/step3.html.twig:3 install/templates/step3.html.twig:8
 msgid "Getting Ready"
-msgstr "Getting Ready"
+msgstr "准备就绪"
 
 #: install/templates/step3.html.twig:12
 msgid "Preparation:"
-msgstr "Preparation:"
+msgstr "准备："
 
 #: install/templates/step3.html.twig:12
 msgid "Let's get your PowerDNS database ready for Poweradmin."
-msgstr "Let's get your PowerDNS database ready for Poweradmin."
+msgstr "让我们为Poweradmin准备您的PowerDNS数据库。"
 
 #: install/templates/step3.html.twig:17
 msgid "About PowerDNS"
-msgstr "About PowerDNS"
+msgstr "关于PowerDNS"
 
 #: install/templates/step3.html.twig:20
 msgid ""
@@ -2285,11 +2285,11 @@ msgstr ""
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
-msgstr "Before proceeding, you should have:"
+msgstr "在继续之前，您应该具备："
 
 #: install/templates/step3.html.twig:23
 msgid "An operational PowerDNS installation"
-msgstr "An operational PowerDNS installation"
+msgstr "一个可运行的PowerDNS安装"
 
 #: install/templates/step3.html.twig:24
 msgid "Database connectivity details (hostname, username, password)"
@@ -2297,31 +2297,31 @@ msgstr "Database connectivity details (hostname, username, password)"
 
 #: install/templates/step3.html.twig:25
 msgid "Administrative access to your database"
-msgstr "Administrative access to your database"
+msgstr "对数据库的管理权限"
 
 #: install/templates/step3.html.twig:32
 msgid "Database Preparations"
-msgstr "Database Preparations"
+msgstr "数据库准备"
 
 #: install/templates/step3.html.twig:35
 msgid "In the next steps, Poweradmin will:"
-msgstr "In the next steps, Poweradmin will:"
+msgstr "在接下来的步骤中，Poweradmin将："
 
 #: install/templates/step3.html.twig:37
 msgid "Connect to your PowerDNS database"
-msgstr "Connect to your PowerDNS database"
+msgstr "连接到您的PowerDNS数据库"
 
 #: install/templates/step3.html.twig:38
 msgid "Create tables needed for Poweradmin functionality"
-msgstr "Create tables needed for Poweradmin functionality"
+msgstr "创建Poweradmin功能所需的表"
 
 #: install/templates/step3.html.twig:39
 msgid "Set up an administrator account for web access"
-msgstr "Set up an administrator account for web access"
+msgstr "设置用于Web访问的管理员帐户"
 
 #: install/templates/step3.html.twig:40
 msgid "Create a config file to store your settings"
-msgstr "Create a config file to store your settings"
+msgstr "创建一个配置文件来存储您的设置"
 
 #: install/helpers/InstallStepHandler.php:169
 msgid "Updating database..."
